# BoTTutorias

./: Procfile  README.md  agil.yaml  db.sqlite3  invoke.py  manage.py  pyproject.toml  requirements.txt  usuarios.yaml
BoTTutorias/: settings.py  urls.py  wsgi.py
bot/migrations/: 0001_initial.py
exceptions/: noInternet.py  noMilestone.py
