[project]
name = "BoTTutorias"
version = "4.0.1"
description = "Bot telegram para gestionar tutorías de forma asíncrona."
authors = [
    "Jose María Luque Luque",
    "Antonio Priego Raya"
]
license = "GPL3.0"
readme = "README.md"
python = "^3.9.1"
homepage = "https://github.com/BoTTuros/BoTTutorias"
repository = "https://github.com/BoTTuros/BoTTutorias"
documentation = "https://github.com/BoTTuros/BoTTutorias"

keywords = ["telegram", "tutorias", "dependency", "pyproject.toml"]

# Requirements
[dependencies]
logging = "^3.2"


[scripts]
poetry = "infer_pyproject.cli:main"

[tool.black]
line-length = 80
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
