[project]
name = "BoTTutorias"
version = "4.0.1"
description = "Bot telegram para gestionar tutorías de forma asíncrona."
authors = [
    "Jose María Luque Luque",
    "Antonio Priego Raya"
]
license = "GPL3.0"
readme = "README.md"
python = "^3.9.1"
homepage = "https://github.com/BoTTuros/BoTTutorias"
repository = "https://github.com/BoTTuros/BoTTutorias"
documentation = "https://github.com/BoTTuros/BoTTutorias"

keywords = ["telegram", "tutorias", "dependency", "pyproject.toml"]

# Requirements
[dependencies]
logging = "^3.2"
async-timeout = "^3.0.1"
dj-database-url = "^0.5.0"
Django = "^2.2.12"
django-heroku = "^0.3.1"
Jinja2 = "^2.11.3"
olefile = "^0.46"
telepot = "^12.7"
virtualenv = "^20.4.2"
virtualenv-clone = "^0.5.4"
virtualenvwrapper = "^4.8.4"
gunicorn = "^20.0.4"

[tool.black]
line-length = 80
